--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          file: .docker/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: mazanax/homebot:${{github.sha}},mazanax/homebot:latest
